Bug 457053 - Blur does not get updated after resizing applet
Summary: Blur does not get updated after resizing applet
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasma (other bugs)
Version First Reported In: 5.96.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-23 19:12 UTC by guimarcalsilva
Modified: 2022-08-01 15:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.97
Sentry Crash Report:


Attachments
Unblurred region (983.26 KB, image/png)
2022-07-23 19:12 UTC, guimarcalsilva
Details
Scale: 1x > 2x > log out and in again > 1x > resize (420.41 KB, image/png)
2022-07-26 18:45 UTC, guimarcalsilva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description guimarcalsilva 2022-07-23 19:12:28 UTC
Created attachment 150856 [details]
Unblurred region

SUMMARY

If you resize an applet, the blur effect doesn't get updated as you resize. This means you end up with an unblurred area on the applet until you close and open it again. I can only reproduce this on Wayland as bug 457052 prevents me from resizing applets on X11.
 
STEPS TO REPRODUCE
1. Resize an applet with the blur effect active

OBSERVED RESULT

The blur region is not updated while resizing, leaving an unblurred area on the applet.

EXPECTED RESULT

Blur should be updated to match the new size of the applet. 

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Kernel Version: 5.15.0-41-generic (64-bit)
Graphics Platform: Wayland
Processors: 6 × Intel® Core™ i5-9400F CPU @ 2.90GHz
Memory: 7,6 GiB of RAM
Graphics Processor: Radeon RX 570 Series

ADDITIONAL INFORMATION
Latest updates as of July 27th 2022 on KDE Neon Unstable (which I use for testing).
Comment 1 Nate Graham 2022-07-26 18:30:54 UTC
Can reproduce but only when I make the applet really really wide. Can you reproduce that?
Comment 2 guimarcalsilva 2022-07-26 18:44:09 UTC
(In reply to Nate Graham from comment #1)
> Can reproduce but only when I make the applet really really wide. Can you
> reproduce that?

I can reproduce at any size bigger than the default at 1x scale. If I change the scale to 2x, re-login, and change it back to 1x, I can reproduce it only when it's very wide, just like you did. I'm marking this as Confirmed since you could reproduce it.
Comment 3 guimarcalsilva 2022-07-26 18:45:58 UTC
Created attachment 150930 [details]
Scale: 1x > 2x >  log out and in again > 1x > resize

It seems to change based on the scaling factor
Comment 4 Bug Janitor Service 2022-08-01 11:30:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/570
Comment 5 Arjen Hiemstra 2022-08-01 15:08:38 UTC
Git commit 2b187cbcbfe546f0384e861c3117cd3cfe3133d0 by Arjen Hiemstra.
Committed on 01/08/2022 at 11:29.
Pushed by ngraham into branch 'master'.

Update blur and other window effects when the dialog changes size

With the new resizing functionality, the user can resize dialogs
dynamically. We need to make sure to update everything related to the
dialog, including blur areas and similar things, otherwise they use the
old size.

M  +2    -0    src/plasmaquick/dialog.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/2b187cbcbfe546f0384e861c3117cd3cfe3133d0