Update blur and other window effects when the dialog changes size

With the new resizing functionality, the user can resize dialogs
dynamically. We need to make sure to update everything related to the
dialog, including blur areas and similar things, otherwise they use the
old size.

BUG: 457053